[package]
name = "lapis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
lapis-api = { path = "../lapis-api" }
lapis-yew = { path = "../lapis-yew" }
log = "0.4.17"
